# affixai-backend

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/api/routes/: admin.py  audit.py  auth.py  autofill.py  classify.py  cloud_storage.py  collaboration.py  custom_vault.py  data_vault.py  documents.py  enterprises.py  health.py  leads.py  ocr.py  passport_photos.py  public_api.py  referrals.py  signatures.py  subscriptions.py  users.py  vault_entries.py  webhooks.py  workflow.py
app/common/: deps.py  geo.py  vault_schema.py
app/common/services/: audit_service.py  auto_affix.py  cloudinary_storage.py  document_extraction.py  document_processing.py  email_service.py  fastapi_internal.py  local_storage.py  manual_stamp.py  referral_service.py  s3_service.py  signature_processing.py  stripe_service.py  subscription_service.py  webhook_dispatcher.py  workflow.py  workflow_scheduler.py
app/common/services/cloud_storage/: __init__.py  base.py  google_drive.py  stubs.py
app/common/services/payments/: __init__.py  base.py  flutterwave_provider.py  paystack_provider.py  router.py  stripe_provider.py
app/core/: config.py  encryption.py  security.py
app/db/: base.py  session.py
app/db/models/: api_key.py  audit_log.py  cloud_connection.py  custom_vault.py  data_vault.py  document.py  document_comment.py  document_participant.py  document_signing_target.py  enterprise.py  invoice.py  lead.py  passport_photo.py  referral.py  signature.py  stripe_event.py  subscription.py  user.py  vault_entry.py  webhook_endpoint.py
app/models/: audit_schemas.py  auth_schemas.py  collaboration_schemas.py  custom_vault_schemas.py  data_vault_schemas.py  document_schemas.py  enterprise_schemas.py  passport_photo_schemas.py  public_api_schemas.py  schemas.py  signature_schemas.py  subscription_schemas.py  user_schemas.py  webhook_schemas.py  workflow_schemas.py
app/services/: autofill_service.py  classification_service.py  document_processor.py  layout_analyzer.py  ocr_service.py
migrations/models/: 0_20260615143406_init.py  1_20260615184259_add_user_country_code.py  2_20260615185750_add_referrals.py  3_20260628165729_add_comment_field_key.py
tests/: conftest.py  test_autofill.py  test_classification.py  test_document_drafts.py  test_extension_errors.py  test_leads.py  test_payment_routing.py  test_referrals.py  test_spatial_analysis.py  test_webhook_dispatcher.py
uploads/conversion_cache/: 1125f9999e13ef157ac7a8a465895f3848917cae5fdaf824ebd47941ed4f5283__txt__docx  1125f9999e13ef157ac7a8a465895f3848917cae5fdaf824ebd47941ed4f5283__txt__pdf
